sites/all/themes/pul_development_theme/css/pul-development-theme-alpha-default.css
/* This file will hold styles for all layouts using the alpha grid (i.e. not the mobile layout). */


.grid-9 .inside{
padding-right:1em;
}

#zone-branding-wrapper #block-system-main-menu ul.menu li + li > .view-id-libraries_and_collections.view-display-id-block_1, 
#zone-branding-wrapper #block-system-main-menu ul.menu li + li > .libraries-collections-menu  { 
display: none;
}

.front .sidebar-second #section-content{
background:none; 
}

#breadcrumb{
visibility:visible;
}

#breadcrumb .breadcrumb{
padding:.75em 0 0 0;
}

#breadcrumb .breadcrumb a{
background:url(../images/breadcrumb-divider.png) no-repeat right center #bbb;
color:#fff;
text-decoration:none;
padding:2px 14px 2px 8px;
font-size:0.833em;
}

#breadcrumb .breadcrumb a:first-child{
-webkit-border-top-left-radius: 3px;
-webkit-border-bottom-left-radius: 3px;
-moz-border-radius-topleft: 3px;
-moz-border-radius-bottomleft: 3px;
border-top-left-radius: 3px;
border-bottom-left-radius: 3px;
}

#breadcrumb .breadcrumb a:last-child{
-webkit-border-top-right-radius: 3px;
-webkit-border-bottom-right-radius: 3px;
-moz-border-radius-topright: 3px;
-moz-border-radius-bottomright: 3px;
border-top-right-radius: 3px;
border-bottom-right-radius: 3px;
background-image:none;
}

.not-front #region-content .region-inner.region-content-inner{
padding:0 0 3em 0;
}

.front #zone-postscript-wrapper{
padding-bottom:3em;
}

#pu-footer-logo img{
width:200px;
}

.grid-3.region.region-sidebar-second input[type="text"],
.panel-panel.grid-3 textarea,
.panel-panel.grid-3 input[type="text"],
.panel-panel.grid-3 select{
width: 210px;
}
.panel-panel.grid-3 textarea, .panel-panel.grid-3 input[type="text"] {
	width: 210px;
	border: 1px solid #727272;
}
textarea, input[type="text"], input[type="email"] {
width:350px;
}

#region-sidebar-second .login_field input[type="text"],
#region-sidebar-second .login_field input[type="password"]{
width:200px;
}

#region-sidebar-second .login_field input[type="submit"]{
float:right;
margin:0 20px 0 0;
}

#region-sidebar-second .login_field p{
margin-top:0;
}

#region-sidebar-second .login_field h4{
margin-bottom:0;
}

#illiad-first-time{
clear:both;
font-style:italic;
padding-top:5px;
}


/* =============================================================================
   DATABASES
   ========================================================================== */

.pane-dbsearch-block-dbsearch-search{
padding-bottom:0;
}

.pane-dbsearch-block-dbsearch-search input#edit-submit{
margin-top:0;
}

.grid-3 button,
.grid-3 input[type="reset"],
.grid-3 input[type="submit"],
.grid-3 input[type="button"]{
margin:5px 10px 0 0;
}

.view-tier-one-resources .views-row, view-tier-two-resources .views-row{
padding-bottom: 1em;
}

.views-tier-one-resources .views-row h3, .views-tier-two-resources .views-row h3{
margin-top: .5em;
}

/* =============================================================================
   HEADER
   ========================================================================== */

#section-header{
height: 126px; /* height for standard version */
height:146px;  /* height for advert */

background:url(../images/BG.gif) repeat-x 0 30px #fff;
padding:0;
}

.front #zone-content-wrapper{
background:url(../images/home-BG.gif) repeat-x 0 -126px transparent; /*without advert bar */
background:url(../images/home-BG.gif) repeat-x 0 -121px transparent; /*with advert bar */

}


/* =============================================================================
   USER MENU
   ========================================================================== */

#zone-user-wrapper{
height:26px;
display: block;
}

#zone-user-wrapper {
	background-color: #fff;
	padding: 6px 0 2px 0;
	font-size: 0.9em;
	margin-bottom: 1em;
	background-color: rgb(226, 226, 226);
	/* background-color: #fff; */
	background-color: #000;
	border-bottom: 2px solid orange;

}
.region-user-second ul {
	float: right;
	margin: 5px 0;
	padding: 0;
	
}
.region-user-second li {
	float: left;
	line-height: 0.4em;
	border-right: 1px dotted #666666;
	margin: 0;
	padding: 0;
	height: 10px;
}
.region-user-second li a {
	position: relative;
	top: -5px;
}
.region-user-second li a:before {
	font-family: fontAwesome;
	padding-right: 5px;
	font-size: 1.1em;

	content: "\f073";
}
.region-user-second li + li a:before {
	font-family: fontAwesome;
	padding-right: 5px;
	font-size: 1.1em;
	content: "\f002";
}
.region-user-second li + li + li a:before {
	padding-right: 0;
	content: "";
}
.region-user-second li a {
	display: block;
	color: #fff;
	text-decoration: none;
	width: auto;
	text-align: center;
	padding: 8px;
	margin: 0 0 0 -4px;
}
.region-user-second li a:hover {
	color: #000;
	background-color: #F58026;
}
.region-user-second li.first  {
	border-left: none;
}
.region-user-second li.last  {
	border-right: none;
}





/* =============================================================================
   BRANDING
   ========================================================================== */

#zone-branding-wrapper .branding-data{
clear:none;
float:left;
}

#logo{
padding:0;
max-width:320px;
}


/* =============================================================================
   MAIN MENU
   ========================================================================== */

#block-system-main-menu ul.menu li{
float: left;
}

#zone-branding-wrapper #block-system-main-menu{
clear:none;
display:block;
float:right;
}


#zone-branding-wrapper #block-system-main-menu ul.menu li{
display:block;
padding:0;
}

#zone-branding-wrapper #block-system-main-menu ul.menu li span.main-menu-item-title,
#zone-branding-wrapper #block-system-main-menu ul.menu li a{
background-image:url(../images/mainnav-rule.gif);
background-repeat:no-repeat;
background-position:left center;
}

#zone-branding-wrapper #block-system-main-menu ul.menu li.first a{
background-image:none;
}
/* ... */

